# xpel-cpp-shared

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle  xpel_module_publish.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: XpPlaceHolder.cpp  XpPlaceHolder.h
src/main/java/com/xpel/android/cpp/shared/: PlaceHolder.java
